syntax = "proto3";

option csharp_namespace = "Inventory.grpc.Protos";

service ExistenceService {
	rpc checkExistence(ProductRequest) returns (ProductExistenceReply);
}

message ProductRequest {
	string id = 1;
}

message ProductExistenceReply {
	int32 productQty = 1;
}
